--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -404,54 +404,52 @@ m4trace:configure.ac:20: -1- AH_OUTPUT([HAVE_OPENGL_GL_H], [/* Define to 1 if yo
 @%:@undef HAVE_OPENGL_GL_H])
 m4trace:configure.ac:20: -1- AH_OUTPUT([HAVE_OPENGL_GLU_H], [/* Define to 1 if you have the <OpenGL/glu.h> header file. */
 @%:@undef HAVE_OPENGL_GLU_H])
-m4trace:configure.ac:36: -1- AC_CONFIG_SUBDIRS([ Plugins/ExtensionLoader
-						Plugins/TestPlugin
+m4trace:configure.ac:36: -1- AC_CONFIG_SUBDIRS([ Plugins/JsonConfigurationFileManager
 						Plugins/LuaScriptingPlugin])
-m4trace:configure.ac:36: -1- AC_SUBST([subdirs], ["$subdirs m4_normalize([ Plugins/ExtensionLoader
-						Plugins/TestPlugin
+m4trace:configure.ac:36: -1- AC_SUBST([subdirs], ["$subdirs m4_normalize([ Plugins/JsonConfigurationFileManager
 						Plugins/LuaScriptingPlugin])"])
 m4trace:configure.ac:36: -1- AC_SUBST_TRACE([subdirs])
 m4trace:configure.ac:36: -1- m4_pattern_allow([^subdirs$])
-m4trace:configure.ac:44: -1- AM_SILENT_RULES([yes])
-m4trace:configure.ac:44: -1- AC_SUBST([AM_V])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([AM_V])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^AM_V$])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([AM_V])
-m4trace:configure.ac:44: -1- AC_SUBST([AM_DEFAULT_V])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([AM_DEFAULT_V])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^AM_DEFAULT_V$])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([AM_DEFAULT_V])
-m4trace:configure.ac:44: -1- AC_SUBST([AM_DEFAULT_VERBOSITY])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([AM_DEFAULT_VERBOSITY])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^AM_DEFAULT_VERBOSITY$])
-m4trace:configure.ac:44: -1- AC_SUBST([AM_BACKSLASH])
-m4trace:configure.ac:44: -1- AC_SUBST_TRACE([AM_BACKSLASH])
-m4trace:configure.ac:44: -1- m4_pattern_allow([^AM_BACKSLASH$])
-m4trace:configure.ac:44: -1- _AM_SUBST_NOTMAKE([AM_BACKSLASH])
-m4trace:configure.ac:46: -1- AC_CONFIG_FILES([Makefile])
-m4trace:configure.ac:47: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:47: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:47: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:47: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:47: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:47: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:47: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:47: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.ac:47: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.ac:47: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:47: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.ac:47: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.ac:47: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:47: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:47: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:47: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:47: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:47: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:47: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:47: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:47: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:47: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:47: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:47: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:47: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:47: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:43: -1- AM_SILENT_RULES([yes])
+m4trace:configure.ac:43: -1- AC_SUBST([AM_V])
+m4trace:configure.ac:43: -1- AC_SUBST_TRACE([AM_V])
+m4trace:configure.ac:43: -1- m4_pattern_allow([^AM_V$])
+m4trace:configure.ac:43: -1- _AM_SUBST_NOTMAKE([AM_V])
+m4trace:configure.ac:43: -1- AC_SUBST([AM_DEFAULT_V])
+m4trace:configure.ac:43: -1- AC_SUBST_TRACE([AM_DEFAULT_V])
+m4trace:configure.ac:43: -1- m4_pattern_allow([^AM_DEFAULT_V$])
+m4trace:configure.ac:43: -1- _AM_SUBST_NOTMAKE([AM_DEFAULT_V])
+m4trace:configure.ac:43: -1- AC_SUBST([AM_DEFAULT_VERBOSITY])
+m4trace:configure.ac:43: -1- AC_SUBST_TRACE([AM_DEFAULT_VERBOSITY])
+m4trace:configure.ac:43: -1- m4_pattern_allow([^AM_DEFAULT_VERBOSITY$])
+m4trace:configure.ac:43: -1- AC_SUBST([AM_BACKSLASH])
+m4trace:configure.ac:43: -1- AC_SUBST_TRACE([AM_BACKSLASH])
+m4trace:configure.ac:43: -1- m4_pattern_allow([^AM_BACKSLASH$])
+m4trace:configure.ac:43: -1- _AM_SUBST_NOTMAKE([AM_BACKSLASH])
+m4trace:configure.ac:45: -1- AC_CONFIG_FILES([Makefile])
+m4trace:configure.ac:46: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:46: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:46: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:46: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:46: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.ac:46: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:46: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:46: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:46: -1- AC_SUBST_TRACE([MKDIR_P])
