implemented a simple logger

--- a/autom4te.cache/output.1
+++ b/autom4te.cache/output.1
@@ -729,6 +729,7 @@ LIBSIGC_CFLAGS
 LIBSIGC_LIBS
 CPP'
 ac_subdirs_all=' Plugins/JsonConfigurationFileManager
+						Plugins/Logger
 						Plugins/LuaScriptingPlugin'
 
 # Initialize some variables set by options.
@@ -4702,7 +4703,7 @@ if test "$enable_plugins" = "yes"; then
 
 	
 
-subdirs="$subdirs Plugins/JsonConfigurationFileManager Plugins/LuaScriptingPlugin"
+subdirs="$subdirs Plugins/JsonConfigurationFileManager Plugins/Logger Plugins/LuaScriptingPlugin"
 
     { $as_echo "$as_me:${as_lineno-$LINENO}: result: --- Plugin compilation enabled --- " >&5
 $as_echo "--- Plugin compilation enabled --- " >&6; }
