--- a/autom4te.cache/output.1
+++ b/autom4te.cache/output.1
@@ -729,7 +729,8 @@ LIBSIGC_CFLAGS
 LIBSIGC_LIBS
 CPP'
 ac_subdirs_all=' Plugins/JsonConfigurationFileManager
-						Plugins/Logger
+                        Plugins/Logger
+						Plugins/OpenGL
 						Plugins/LuaScriptingPlugin'
 
 # Initialize some variables set by options.
@@ -4703,7 +4704,7 @@ if test "$enable_plugins" = "yes"; then
 
 	
 
-subdirs="$subdirs Plugins/JsonConfigurationFileManager Plugins/Logger Plugins/LuaScriptingPlugin"
+subdirs="$subdirs Plugins/JsonConfigurationFileManager Plugins/Logger Plugins/OpenGL Plugins/LuaScriptingPlugin"
 
     { $as_echo "$as_me:${as_lineno-$LINENO}: result: --- Plugin compilation enabled --- " >&5
 $as_echo "--- Plugin compilation enabled --- " >&6; }
